# walrus_cpp

./: .buildinfo  CMakeLists.txt  README.md  environment.yml  genindex.html  index.html  modules.html  noxfile.py  objects.inv  paula.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  virtualenv_warmup.sh  walrus.html
.github/workflows/: main.yml
_sources/: index.rst.txt  modules.rst.txt
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  walrus.rst
src/: bindings.cpp
src/walrus/: __init__.py
src/walrus/carpenter/src/: hello.cpp
src/walrus/celia/: CMakeLists.txt
src/walrus/celia/include/: version.h.in
src/walrus/celia/src/: main.cpp
tests/: test_extension.py  test_extension_array.py  test_extension_class.py  test_paula.py
